week 4 final version